Closed Bug 290090 Opened 21 years ago Closed 20 years ago

Meta refresh should pass VALIDATE_ALWAYS instead of LOAD_BYPASS_CACHE

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: darin.moz, Assigned: darin.moz)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Meta refresh should pass VALIDATE_ALWAYS instead of LOAD_BYPASS_CACHE For some reason meta refreshes of more than 15 seconds set LOAD_BYPASS_CACHE when triggering the new page load. That seems really overkill to me. All that is required is that all of the page contents be validated. I think we should switch to VALIDATE_ALWAYS. Basically, I'm proposing a change to this code: http://lxr.mozilla.org/mozilla/source/docshell/base/nsDocShell.cpp#5974 I think this should block freezing nsIWebNavigation.
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.8beta2
So VALIDATE_ALWAYS will check with the server even if it's not expired from local cache yet? If so, this sounds like a perfectly reasonable change.
Yes, VALIDATE_ALWAYS unlike LOAD_BYPASS_CACHE will do a conditional query whenever possible. Otherwise, they are equivalent.
Target Milestone: mozilla1.8beta2 → mozilla1.9alpha
Attached patch v1 patchSplinter Review
Here we go.
Attachment #210955 - Flags: superreview?(bzbarsky)
Attachment #210955 - Flags: review?(cbiesinger)
Attachment #210955 - Flags: superreview?(bzbarsky) → superreview+
Attachment #210955 - Flags: review?(cbiesinger) → review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Attachment #210955 - Flags: branch-1.8.1?(bzbarsky)
Attachment #210955 - Flags: branch-1.8.1?(bzbarsky) → branch-1.8.1+
Keywords: fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: