fixes bug 290090 "Meta refresh should pass VALIDATE_ALWAYS instead of LOAD_BYPASS_CACHE" r=biesi sr=bzbarsky